# sandbox

./: .coveragerc  .dockerignore  .env  .gitignore  Dockerfile  README.md  commands.md  docker-compose.yml  initialize_pgadmin.md  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: lint.yml  test.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/django_tutorial/polls/: views.py
backend/src/backend/django_tutorial/: db.sqlite3  frequentlu_used_commands.md
docs/: frequently_used_commands.md  initialize_pgadmin.md  my_commands.md
frontend/: .gitignore  Dockerfile
frontend/docs/: frequently_used_commands.md
lib/common/: sandbox_logger.py
playground/: .coveragerc  .dockerignore  .gitignore  Dockerfile  pyproject.toml
playground/anti_join/: anti_join.ipynb
playground/cosine_similarity/: cosine_similarity.ipynb
playground/docs/: frequently_used_commands.md
playground/src/playground/anti_join/: anti_join.ipynb
playground/src/playground/concat_rounded_float/: df_concat.csv
playground/src/playground/draw_relationships/: draw_relationships.py
playground/src/playground/exhaustive_data_generator/: exhaustive_data_generator.py  exhaustive_data_generator2.py  exhaustive_data_generator_memory_save.py
playground/src/playground/load_env_val/: load_env_val.py  sample_base_settings.py
playground/src/playground/measure_performance/: measure_performance.py
playground/src/playground/test_breakpoint_in_generator/: my_generator.py  test_my_generator.py
playground/src/playground/union_find/: union_find.ipynb
sandbox/: poc.py
sandbox/anti_join/: anti_join.ipynb
sandbox/anti_join/src/: anti_join.ipynb
sandbox/common/: postgres_client.py  sandbox_logger.py
sandbox/cosine_similarity/: cosine_similarity.ipynb
sandbox/exhaustive_data_generator/: exhaustive_data_generator.py  exhaustive_data_generator2.py
sandbox/pandas_tutorial/: main.py
sandbox/test_pytest/: feature_engineer.py  feature_pipeline.py
sandbox/test_pytest/src/: feature_pipeline.py
sandbox/test_pytest/tests/: test_feature_pipeline.py
sandbox/test_pytest/tests/test_pytest/: test_database_client.py  test_feature_engineer.py  test_feature_pipeline.py
sandbox/union_find/: union_find.py
sandbox/union_find/src/: union_find.ipynb
src/: cosine_similarity.ipynb  union_find.ipynb
src/anti_join/: anti_join.ipynb
src/calculate_dumbbell_weight/: calculate_dumbbell_weight.py
src/click_specified_point/: click_specified_point.py
src/common/: sandbox_logger.py
src/consolidate_csv_to_excel/: config_loader.py  consolidate_csvs_to_excel_by_date.py  consolidate_csvs_to_excel_by_host.py  create_test_data.py  csv_consolidator.py  csv_path_mapper.py  custom_logger.py  date_handler.py  excel_analyzer.py  file_utility.py  processing_summary.py  target_handler.py
src/consolidate_csv_to_excel/config/: config.yml
src/consolidate_csv_to_excel/log/: aaatest.log.2024-10-16_05-24-13  aaatest.log.2024-10-16_05-24-18  aaatest.log.2024-10-16_05-24-23  test.log.2024-09-16
src/consolidate_csv_to_excel/log_directory/abc02-foo/: test_19880210.csv
src/consolidate_csv_to_excel/log_directory/def02-foo/: test_19880209.csv  test_19880210.csv
src/consolidate_csv_to_excel/output/: abc01-foo.xlsx  abc02-foo.xlsx  def01-foo.xlsx  def02-foo.xlsx
src/cosine_similarity/: cosine_similarity.py
src/django_tutorial/: frequentlu_used_commands.md
src/django_tutorial/mysite/: settings.py
src/draw_relationships/: draw_relationships.py
src/exhaustive_data_generator/: exhaustive_data_generator.py  exhaustive_data_generator2.py  exhaustive_data_generator_memory_save.py
src/exhaustive_record_generator/: exhaustive_record_generator.py
src/pandas_tutorial/data/: titanic.xlsx
src/send_enter/: send_enter.py
src/sql_analyzer/: sql_analyzer.py
src/test_pytest/: database_client.py  feature_pipeline.py
src/workspace/anti_join/: anti_join.ipynb
src/workspace/common/: measure_performance.py  postgres_client.py  postgres_settings.py  sandbox_logger.py
src/workspace/concat_rounded_float/: concat_rounded_float.py  df_float32.parquet  df_float64.parquet
src/workspace/draw_relationships/: draw_relationships.py
src/workspace/exhaustive_data_generator/: exhaustive_data_generator.py
src/workspace/kfc/: happiness_score.py  happiness_score.yaml
src/workspace/load_env_val/: .env  load_env_val.py  sample_base_model.py  sample_base_settings.py
src/workspace/measure_performance/: measure_performance.py
src/workspace/pandas_tutorial/: main.py
src/workspace/test_breakpoint_in_generator/: my_generator.py
src/workspace/union_find/: union_find.ipynb
tests/consolidate_csv_to_excel/: test_config_loader.py  test_csv_consolidator.py  test_csv_path_mapper.py  test_date_handler.py  test_excel_analyzer.py  test_file_utility.py  test_processing_summary.py  test_target_handler.py
tests/consolidate_csv_to_excel/data/: invalid_threshold.yml  invalid_yaml.yml  test_config.yml
tests/test_pytest/: test_database_client.py  test_feature_engineer.py  test_feature_pipeline.py
tests/workspace/common/: test_measure_performance.py  test_sandbox_logger.py
tests/workspace/measure_performance/: test_measure_performance.py
tests/workspace/pandas_tutorial/: test_pandas.py
tests/workspace/test_breakpoint_in_generator/: test_my_generator.py
uv_ruff/: Dockerfile  docker-compose.yaml  pyproject.toml
uv_ruff/notebooks/: calculate.ipynb
uv_ruff/numbers/: pyproject.toml
uv_ruff/src/sample_project/: calculate.py
uv_ruff_mypy_pytest/: Dockerfile  docker-compose.yaml  pyproject.toml
uv_ruff_mypy_pytest/tests/sample_project/: test_calculate.py
(+28 files in other folders)
