[project]
name = "workspace"
version = "0.1.0"
description = "workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mypy>=2.1.0",
    "nbconvert>=7.17.1",
    "networkx>=3.5",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "psycopg2-binary>=2.9.12",
    "pulp>=3.3.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.15",
    "scikit-learn>=1.8.0",
    "sqlglot>=30.8.0",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
target-version = "py313"
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    "UP",
    "PD",
    "NPY"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-config=.coveragerc --cov-report=html"
pythonpath = ["src"]
testpaths = ["tests"]
